slideshow view height issue resolved

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                       Become an expert today at building responsive, and attractive websites with our project based system of learning capable of taking you from a complete beginner to a Job ready Level. </p>
                       <a href='#register' class='btn_register'>Join Now</a>
                  </div>
-                 
             </div>
+            <div class="bg-overlay2"></div>
        </section>
 
        <!-- WHO WE ARE -->
